--- a/res/i18n/crowdin/fro.json
+++ b/res/i18n/crowdin/fro.json
@@ -30,11 +30,16 @@
     "btn.promote": "Adovber",
     "btn.sell": "Vendre",
     "btn.sell.minor": "vendre",
+    "buildings.academy.flavor": "Cvriosité estoy mère de science. Nos chaz en manière chevalevrevse périrent",
     "buildings.aicore.attemptsell": "Halte, manant !",
     "buildings.aqueduct.label": "Aqvedvc",
-    "buildings.barn.label": "Grange",
+    "buildings.barn.label": "Estable",
+    "buildings.biolab.label": "Apothicaire",
     "buildings.chapel.label": "Chapelle",
     "buildings.factory.label": "Usyne",
+    "buildings.hut.label": "Chavmière",
+    "buildings.hydroplant.label": "Movlin",
+    "buildings.mansion.label": "Castel",
     "buildings.pasture.label": "Pastvre",
     "buildings.solarfarm.label": "Ferme Solaire",
     "buildings.group.culture": "Cvltvre",
@@ -48,6 +53,7 @@
     "calendar.year.full": "An {0} - {1}, hui {2}",
     "calendar.year.tooltip": "An :",
     "challendge.1000Years.label": "Mil années",
+    "challendge.atheism.label": "Malfoy",
     "challendge.blackSky.label": "Cyel noir",
     "effectsMgr.statics.catnipJobRatio.title": "Ostils de ferme",
     "effectsMgr.statics.environmentWoodBonus.title": "Prodvction de bois",
@@ -55,20 +61,38 @@
     "effectsMgr.statics.oilReductionRatio.title": "Rédvction de consommation d’huyle",
     "effectsMgr.statics.oilWellRatio.title": "Bonus d’huyle",
     "kittens.craft.confirmation.msg": "Vostre chastons vont PÉRIR",
+    "menu.close": "Clore",
     "navbar.observe": "Observer cyel",
+    "opts.theme.factory": "Usyne",
     "opts.theme.oil": "Huyle",
     "opts.theme.wood": "Bois",
+    "religion.sacrificeBtn.all": "tovs",
+    "res.stack.faith": "Foy",
+    "resources.craftTable.all": "tovs",
     "resources.culture.title": "cvltvre",
+    "resources.faith.title": "foy",
     "resources.iron.title": "fer",
     "resources.kittens.title": "chastons",
+    "resources.oil.title": "huyle",
+    "resources.science.title": "science",
     "resources.wood.title": "bois",
     "science.agriculture.label": "Agricvltvre",
     "science.calendar.label": "Calendrier",
+    "science.calendar.effectDesc": "I am a cat",
     "science.chemistry.label": "Alchimie",
     "stats.kittens.dead": "Chastons occis",
+    "tab.name.science": "Science",
     "trade.msg.elders.departed": "A kitten has joined your village",
+    "ui.filter.all": "Tovs",
+    "ui.close": "clore",
+    "ui.option.close.button": "Clore",
+    "left.resources": "ressovrces",
+    "left.craft": "fabriqver",
+    "console.filter.craft": "Fabriqver",
+    "console.filter.faith": "Foy",
     "village.job.woodcutter": "Bvcheron",
     "village.msg.kitten": "chaston",
     "village.msg.kittens": "chastons",
+    "workshop.refine.confirmation": "Vostre chastons vont PÉRIR",
     "workshop.titaniumMirrors.flavor": "Ceste lvevr est elle en movance ?"
 }
