--- a/res/i18n/crowdin/tok.json
+++ b/res/i18n/crowdin/tok.json
@@ -21,6 +21,7 @@
     "achievements.utopiaProject.title": "pali ma pona",
     "achievements.winterIsComing.title": "tenpo lete li kama",
     "achievements.youMonster.title": "sina monsuta",
+    "achievements.youMonster.desc": "soweli lili moli.",
     "bld.msg.automation.slabs": "kepeken kiwen {0}, kiwen pali +{1}!",
     "btn.all": "ale",
     "btn.all.minor": "ale",
@@ -51,7 +52,7 @@
     "buildings.library.label": "tomo lipu",
     "buildings.logHouse.label": "tomo lili",
     "buildings.logHouse.flavor": "tomo insa pi ma kasi",
-    "buildings.lumberMill.label": "tomo pi pakala kasi",
+    "buildings.lumberMill.label": "tomo kasi",
     "buildings.mansion.label": "tomo pona",
     "buildings.mine.label": "tomo pi pakala kiwen",
     "buildings.mint.label": "tomo mani",
@@ -68,6 +69,7 @@
     "buildings.group.resource": "ijo",
     "buildings.group.science": "sona",
     "buildings.group.storage": "awen",
+    "buildings.group.zebraBuildings": "soweli pimeja en walo",
     "calendar.season.autumn": "tenpo kon",
     "calendar.season.autumn.short": "kon",
     "calendar.season.spring": "tenpo seli",
@@ -93,6 +95,7 @@
     "effectsMgr.statics.mysticismBonus.title": "wawa sona nasa",
     "effectsMgr.statics.oilWellRatio.title": "wawa telo pimeja",
     "effectsMgr.statics.refineRatio.title": "sin moku soweli pali ",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "awen",
     "effectsMgr.statics.starchartGlobalRatio.title": "wawa linja mun",
     "effectsMgr.type.resRatio": "namako {0}",
     "craft.msg.notEnoughCatnip": "wile moku soweli mute!",
@@ -114,48 +117,65 @@
     "prestige.blackCodex.label": "lipu pimeja",
     "prestige.chronomancy.label": "nasa tenpo",
     "prestige.codexLeviathanianus.label": "lipu monsuta",
+    "religion.btn.refine": "o pali",
     "religion.panel.cryptotheology.label": "sona sewi len",
     "religion.panel.orderOfTheSun.label": "kulupu sewi suno",
     "religion.ru.solarchant.label": "kalama suno",
     "religion.sacrificeBtn.all": "ale",
     "religion.tu.blackNexus.label": "insa pimeja",
-    "unit.watt": "Wt",
+    "unit.sec": "tenpo lili",
+    "unit.s": "s",
+    "unit.m": "m",
     "unit.h": "h",
-    "res.stack.demand": "wile (:3)",
+    "unit.d": "t",
+    "unit.year": "tenpo sike",
+    "unit.y": "lon",
+    "res.stack.demand": "(:3) nanpa wile",
     "res.stack.reactors": "ilo suno",
     "res.stack.time": "tenpo",
     "res.stack.tools": "ilo",
+    "res.stack.village": "(:3) kulupu meso",
+    "resources.alicorn.title": "soweli ni li jo waso",
     "resources.blackcoin.title": "mani pimeja",
     "resources.bloodstone.title": "kiwen pi telo loje",
     "resources.blueprint.title": "lipu sona suli",
     "resources.catnip.title": "moku soweli",
     "resources.compedium.title": "lipu sona lili",
     "resources.craftTable.all": "ale",
+    "resources.culture.title": "sona jan",
     "resources.eludium.title": "kiwen sona",
     "resources.kittens.title": "soweli lili",
     "resources.manpower.title": "wawa soweli",
     "resources.manuscript.title": "lipu suli",
-    "resources.megalith.title": "tomo suli",
+    "resources.megalith.title": "miwen ijo suli",
     "resources.minerals.title": "kiwen",
     "resources.necrocorn.title": "soweli moli",
     "resources.oil.title": "telo pimeja",
     "resources.parchment.title": "lipu lili",
     "resources.plate.title": "kiwen supa",
+    "resources.science.title": "sona",
     "resources.slab.title": "supa kiwen",
+    "resources.spice.title": "namako",
     "resources.starchart.title": "lipu pi sona mun",
-    "resources.titanium.title": "kiwen wawa Sitaniju",
+    "resources.titanium.title": "kiwen wawa walo",
     "resources.unicorns.title": "soweli usawi pi kiwen lawa wan",
     "resources.unobtainium.title": "kiwen kama ala ",
     "resources.void.title": "ala",
     "resources.wood.title": "kasi",
+    "resources.worship.title": "sewi e sewi",
+    "resources.zebras.title": "soweli pimeja en walo",
     "science.acoustics.label": "sona kalama",
     "science.agriculture.label": "sona moku kasi",
     "science.brewery.label": "moku soweli pali",
+    "science.cryptotheology.label": "sona sewi len",
     "space.planet.piscine.researchVessel.label": "poki sona",
     "stats.trades.current": "nanpa esun",
     "stats.trades.total": "nanpa esun",
+    "tab.name.science": "sona",
+    "tab.name.space": "kon lupa",
     "tab.name.time": "tenpo",
     "tab.name.trade": "esun",
+    "tab.name.workshop": "tomo pali",
     "trade.attitude.friendly": "pona",
     "trade.attitude.hostile": "utala",
     "trade.effectiveness": "wawa esun: +{0}%",
@@ -169,11 +189,21 @@
     "trade.race.zebras": "soweli pimeja en walo",
     "trade.leviathans.energy": "wawa:",
     "trade.bcoin.buy": "o kama esun e mani pimeja",
+    "ui.filter.all": "ale",
     "ui.loading.msg.14": "pali e mani pimeja",
+    "ui.energy.tooltip": "wawa",
+    "ui.close": "o pini",
+    "ui.option.language": "toki:",
+    "ui.option.close.button": "o pini",
     "ui.option.app.ios": "iOS",
+    "left.resources": "ijo",
+    "left.craft": "o pali",
     "left.hunt.time": "tenpo",
     "console.filter.trade": "esun",
+    "console.filter.craft": "o pali",
     "village.census.lbl.happiness": "pona",
+    "village.census.lbl.leader": "jan suli",
+    "village.census.rank": "nanpa",
     "village.happiness.festival": "musi",
     "village.job.farmer.desc": "o kama jo e kasi pona +5/s",
     "village.job.miner.desc": "+0.25 kiwen pi tenpo lili",
@@ -188,6 +218,7 @@
     "village.trait.none": "ala",
     "village.trait.scientist": "jan sona",
     "village.trait.wise": "jan sona nasa",
+    "res.per.sec": "tenpo lili",
     "res.per.year": "tenpo sike",
     "menu.language": "toki",
     "village.name.Charlie": "jan Sali",
@@ -210,11 +241,7 @@
     "village.surname.Sand": "Ko",
     "village.surname.Berry": "Bewi",
     "village.surname.Shadow": "Sato",
-    "eta.year": "y",
-    "eta.day": "d",
-    "eta.hour": "h",
-    "eta.min": "m",
-    "eta.sec": "s",
+    "eta.year": "lon",
     "workshop.advancedRefinement.label": "moku soweli pona",
     "workshop.amReactors.label": "ilo suno pi ijo ala",
     "workshop.crafts.beam.label": "kasi pali",
