--- a/res/i18n/crowdin/ro.json
+++ b/res/i18n/crowdin/ro.json
@@ -81,69 +81,152 @@
     "btn.nextPage": "Următoarea Pagină",
     "btn.off.minor": "oprit",
     "btn.off.tooltip": "Construcție dezactivată",
+    "btn.prevPage": "Pagina anterioară",
     "btn.reset": "Resetare",
     "btn.sell": "Vinde",
     "btn.sell.minor": "vinde",
+    "construct.all.confirmation.title": "Construieste tot",
     "buildings.aqueduct.flavor": "Înotul interzis",
     "buildings.barn.label": "Hambar",
     "buildings.barn.flavor": "Șobolanii nu sunt o problemă pentru noi!",
     "buildings.biolab.label": "Laborator bio",
     "buildings.biolab.desc": "Îmbunătățește eficacitatea rafinării de catnip cu 10%. Mai eficace dacă este împuternicire.",
+    "buildings.calciner.label": "Topitorie",
     "buildings.field.label": "Câmp de iarba-mâței",
+    "buildings.field.desc": "Planteaza niste iarba matzei in sat. Campurile au +50% productie primavara si -75% productie iarna",
     "buildings.observatory.desc": "Crește șansa evenimentelor astronomice cu 0.2%",
+    "buildings.quarry.label": "Cariera de piatra",
+    "buildings.group.zebraBuildings": "Zebre",
+    "challendge.ironWill.label": "Voință de Fier",
+    "discardParagon.confirmation.msg1": "Esti sigur/a ca doresti sa renunti la toate punctele tale paragon? Aceasta actiune nu poate fi data inapoi.",
+    "effectsMgr.statics.calcinerSteelCraftRatio.title": "Bonus aplicat Topitoriei de catre Otelarie",
+    "effectsMgr.statics.challengeHappiness.title": "Fericire",
+    "effectsMgr.statics.coalRatioGlobalReduction.title": "Reducerea penalitatilor aplicate productiei de carbune",
+    "effectsMgr.statics.cryostation-woodMax.title": "Criostatie - Maxim de lemn",
     "effectsMgr.statics.energyProduction.title": "Producția de energie",
+    "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "Bonus la productia de Unobtaniu",
     "effectsMgr.statics.happiness.title": "Fericire",
     "effectsMgr.statics.hashrate.title": "Rata de calcul",
     "effectsMgr.statics.heatMax.title": "Căldură maximă",
     "effectsMgr.statics.nextHashLevelAt.title": "Următorul nivel de hashrate la",
+    "effectsMgr.statics.productionRatio.title": "Bonus de Productie",
     "effectsMgr.statics.temporalParadoxVoid.title": "Vid maxim",
     "effectsMgr.statics.unhappinessRatio.title": "Reduce tristetea",
+    "effectsMgr.statics.weaponEfficency.title": "Eficienta armei",
+    "menu.reset": "Resetare",
     "opts.lang": "Limba",
+    "opts.theme.black": "Negru",
+    "opts.theme.oil": "Petrol",
+    "opts.notation.si": "Clasic",
     "policy.clearSkies.label": "Cer senin",
     "policy.communism.desc": "Industrializare cu orice preț. Crește producția de cărbune, fier, și titaniu, și ieftineste fabricile.",
+    "policy.extravagance.label": "Extravaganta",
+    "policy.stoicism.label": "Stoicism",
+    "policy.technocracy.label": "Tehnocratie",
+    "prestige.codexLogos.label": "Codex Logos",
+    "prestige.codexVox.label": "Codex Vox",
     "prestige.goldenRatio.label": "Raportul de aur",
     "prestige.pawgan.label": "Ritualuri pagane",
     "religion.ru.goldenSpire.desc": "Templele pot înmagazina cu 50% mai multă credință",
     "religion.ru.solarchant.label": "Cântec solar",
+    "religion.sacrificeBtn.all": "toate",
+    "religion.transcend.confirmation.title": "Trascende?",
     "religion.transcendBtn.label": "Trascende",
+    "religion.tu.blackRadiance.label": "Radiere Neagra",
+    "religion.zu.ivoryCitadel.label": "Fortareata de Fildes",
+    "religion.zu.unicornTomb.label": "Cimitirul de unicorni",
     "unit.hour": "ora",
+    "res.stack.buildings": "Cladiri",
+    "res.stack.extermination": "Pacturi",
     "res.stack.time": "Timp",
+    "res.stack.upgrades": "Imbunatatiri",
+    "res.toNextKitten": "Catre urmatorul pisoi",
     "reset.confirmation.msg60": "Vei primi extra fericire bonus.",
+    "resources.antimatter.title": "antimaterie",
     "resources.compedium.title": "compendiu",
+    "resources.craftTable.all": "toate",
     "resources.kerosene.title": "kerosen",
+    "resources.scaffold.title": "schela",
+    "resources.steel.title": "otel",
     "resources.tears.title": "lacrimi",
+    "resources.titanium.title": "titan",
+    "resources.zebras.title": "zebre",
+    "science.ai.label": "Inteligenta Artificiala",
     "science.animal.desc": "Domesticarea permite accesul la diverse resurse animalice prin intermediul pâșunii. Îmbunătățește producția ta de mâncare.",
     "science.archery.desc": "Armament cu rază lungă cunoscut ca 'Arc'.",
     "science.dimensionalPhysics.label": "Fizici dimensionale",
+    "science.drama.effectDesc": "Deblocheaza Festivalurile si Artefactele culturale",
+    "science.engineering.label": "Inginerie",
     "science.engineering.effectDesc": "Deblochează Conductele Acvatice",
+    "science.hydroponics.label": "Ferme hidroponice",
     "science.industrialization.desc": "Industrializarea reprezintă conceptul de producere în masă a materialelor, de la produse alimentare la părți ale mașinăriilor.",
     "science.industrialization.effectDesc": "Deblochează Automatizare Avansată și Șlepuri",
+    "science.math.flavor": "Toarce egal cu Miau inmultit cu Labutza la patrat",
     "science.mining.label": "Minat",
+    "science.orbitalEngineering.desc": "Ingineria Orbitala permite civilizatiei pisicesti sa dezvolte proiecte avansate in spatiu.",
     "science.rocketry.effectDesc": "Permite construcția navel spațiale și a procesării petrolului",
+    "science.theology.desc": "Teologiua reprezinta studiul religiei. Religia este un concept cheie care afecteaza dezvoltarea culturala, stiintifica si industriala. <br> (Indiciu: Nu este nevoie sa ai toata aceasta cultura in acelasi timp)",
+    "science.voidSpace.label": "Vid",
+    "space.centaurusSystemMission.label": "Misiunea Sistemul centaur",
     "space.centaurusSystemMission.desc": "Sistemul Centaurus este un sistem stelar îndepărtat și cald.",
+    "space.piscineMission.desc": "Piscine este o imensa planeta acvatica cu un mediu acid si o atmosfera de metan",
     "space.planet.cath.spaceElevator.label": "Lift Spațial",
+    "space.planet.centaurusSystem.moltenCore.desc": "Fiecare nivel de Miez Topit imbunatateste eficacitatea Tectonica cu 5%",
     "space.planet.yarn.terraformingStation.label": "Stație de Terraformare",
     "stats.buildings": "Clădirile au fost construite",
     "stats.trades.current": "Comerturi terminate",
+    "stats.trades.total": "Comerturi terminate",
+    "tab.name.time": "Timp",
+    "time.reset.title": "Resetare",
+    "time.void": "Neant",
+    "time.vsu.voidHoover.desc": "Creste maximul de neant primit pe zi in timpul Paradoxului Temporal",
+    "trade.new.civ": "Ai gasit o noua civilizatie!",
     "trade.race.zebras": "Zebre",
+    "ui.filter.all": "Toate",
+    "ui.loading.msg.5": "Motoarele pe aburi se repornesc",
+    "ui.option.language": "Limba:",
+    "ui.option.language.apply": "Aplica schimbarile",
+    "ui.option.highlight.unavailable": "Evidentiaza cladirile limitate de spatiul de depozitare",
+    "ui.option.export": "Exporta in:",
+    "ui.option.app.ios": "iOS",
+    "left.craft": "fabricare",
+    "left.hunt": "Trimite vanatori",
+    "left.hunt.time": "timp",
+    "console.filter.craft": "Fabricare",
+    "console.filter.unicornSacrifice": "Sacrificii de Unicorni",
     "village.btn.hunters": "Trimite vanatori",
+    "village.btn.promote.desc": "Liderul iti promoveaza pisoii si cheltuie aur pentru festivitati",
+    "village.census.filter.all": "Toate slujbele",
     "village.census.lbl.happiness": "Fericire",
+    "village.census.lbl.leader": "Lider",
+    "village.festival.msg.start": "Festivalul cultural a inceput",
     "village.happiness.buildings": "Cladiri",
     "village.happiness.rare.resources": "Resurse rare",
+    "village.job.farmer": "Fermier",
     "village.job.miner.desc": "+0.25 minerale pe secundă",
-    "village.skill.competent": "competent",
+    "village.job.woodcutter": "Taietor de lemne",
     "village.tab.title.consortium": "Consortiu",
+    "menu.language": "Limba",
     "village.surname.Chalk": "Creta",
+    "workshop.upgradePanel.label": "Imbunatatiri",
     "workshop.all.upgrades.unlocked": "Toate imbunatatirile sunt deblocate!",
+    "workshop.barges.desc": "Porturile depoziteaza mai mult carbune",
     "workshop.combustionEngine.desc": "Reduce consumul de carbune al Uzinelor cu 20%",
     "workshop.craftPanel.header.freeEngineers": "Ingineri gratis",
     "workshop.crafts.scaffold.label": "Schela",
     "workshop.crafts.thorium.desc": "Combustibil extrem de reactiv și instabil",
+    "workshop.eludiumReflectors.label": "Reflectoare de Eludium",
+    "workshop.enrichedThorium.label": "Toriu imbogatit",
+    "workshop.fuelInjectors.desc": "Reduce consumul de carbune al Uzinelor cu 20%",
     "workshop.ironAxes.label": "Topor de fier",
     "workshop.machineLearning.desc": "Fiecare nivel de AI Nucleu o să crească eficacitatea Centrului de Date cu 10%",
     "workshop.oilDistillation.desc": "Producția de petrol este îmbunătățită cu 75%.",
+    "workshop.oilRefinery.desc": "Imbunatateste eficacitatea puturilor de petrol cu 35%",
+    "workshop.orbitalGeodesy.desc": "Carierele de piatra acum vor da si o cantitate mica de uraniu",
+    "workshop.photovoltaic.label": "Celule fotovoltaice",
     "workshop.pneumaticPress.label": "Presă pneumatică",
     "workshop.pyrolysis.label": "Piroliză",
     "workshop.steelPlants.label": "Plante de oțel",
+    "workshop.titaniumAxe.label": "Topor de Titan",
     "workshop.titaniumSaw.label": "Ferastrau din titaniu"
 }
