--- a/res/i18n/crowdin/ru.json
+++ b/res/i18n/crowdin/ru.json
@@ -28,6 +28,7 @@
     "achievements.lotusMachine.desc": "Нарушь циклы реинкарнации.",
     "achievements.meowMeowRevolution.title": "Мяу мяу революция",
     "achievements.meowMeowRevolution.desc": "Построй фабрику в режиме железной воли.",
+    "achievements.panel.label": "Достижения",
     "achievements.serenity.title": "Безмятежность",
     "achievements.serenity.desc": "Собери 50 котят без единой смерти.",
     "achievements.shadowOfTheColossus.title": "Тень колосса",
@@ -61,6 +62,8 @@
     "achievements.youMonster.title": "Ты монстр",
     "achievements.youMonster.desc": "Бедные котята.",
     "ai.apocalypse.msg": "ИИ уничтожил {0}% твоих ресурсов",
+    "badges.header": "Бейлжиков: {0} из {1}",
+    "badges.panel.label": "Бейлжики",
     "bld.msg.automation": "Сделано автоматизацией мастерской",
     "bld.msg.automation.beams": "Израсходовано {0} дерева на +{1} балок!",
     "bld.msg.automation.plates": "Израсходовано {0} железа на +{1} пластин!",
@@ -72,6 +75,8 @@
     "btn.all.unassign": "[-все]",
     "btn.aoff.tooltip": "Автоматизация неактивна",
     "btn.aon.tooltip": "Автоматизация активна",
+    "btn.almostlimited.tooltip": "Улучшение заблокирует Автократию",
+    "btn.pollution.tooltip": "Загрязняет экосферу",
     "btn.build": "Построить",
     "btn.challenge": "Начать вызов",
     "btn.complete": "(достигнуто)",
@@ -125,6 +130,7 @@
     "buildings.broadcasttower.desc": "Создаёт культуру и счастье. Эффективней с высоким уровнем электричества.",
     "buildings.calciner.label": "Печь обжига",
     "buildings.calciner.desc": "Высокоэффективный источник металла. Потребляет 1,5 минерала и 0,02 масла за тик. Производит железо и небольшое количество титана",
+    "buildings.calciner.desc.automation": "Автоматизация преобразует {0}% производимого железа в сталь.",
     "buildings.chapel.label": "Часовня",
     "buildings.chapel.desc": "Создаёт культуру и веру. Может быть улучшена религиозными изысканиями.",
     "buildings.chronosphere.label": "Хроносфера",
@@ -133,6 +139,7 @@
     "buildings.dataCenter.desc": "Увеличивает эффект справочников на максимальную науку",
     "buildings.factory.label": "Фабрика",
     "buildings.factory.desc": "Улучшает эффективность изготовления и позволяет поручить изготовление котенку-инженеру.",
+    "buildings.factory.desc.automation": "Автоматизация очищает воздух от загрязнений.",
     "buildings.field.label": "Поле мяты",
     "buildings.field.desc": "Засеять новое поле мяты. Мяты вырастает на 50% больше весной и на 75% меньше - зимой.",
     "buildings.field.flavor": "Мятные поля простираются до горизонта...",
@@ -146,6 +153,8 @@
     "buildings.hut.flavor": "Государство на двоих.",
     "buildings.hydroplant.label": "ГЭС",
     "buildings.hydroplant.desc": "Современный источник энергии.",
+    "buildings.ivoryTemple.label": "Храм слоновой кости",
+    "buildings.ivoryTemple.desc": "Мистический храм, в котором слоновая кость превращается в минералы",
     "buildings.library.label": "Библиотека",
     "buildings.library.desc": "Построить библиотеку для сохранения священного знания кошачества. Каждое улучшение даёт 10% к науке.",
     "buildings.library.flavor": "Всё на котонском.",
@@ -187,6 +196,7 @@
     "buildings.smelter.flavor": "Следи за усами!",
     "buildings.solarfarm.label": "Солнечная батарея",
     "buildings.solarfarm.desc": "Альтернативный источник энергии. Мощность зависит от сезона.",
+    "buildings.spaceport.label": "Космопорт",
     "buildings.steamworks.label": "Паровая машина",
     "buildings.steamworks.desc": "Существенно снижает добычу угля, если активна. Бесполезна сама по себе, но может делать много классных вещей, если её улучшить.",
     "buildings.steamworks.flavor": "Я просто сплю здесь, а как будто работаю",
@@ -209,6 +219,7 @@
     "buildings.workshop.desc": "Даёт доступ к мириаде улучшений. Плюс 6% к эффективности изготовления.",
     "buildings.workshop.flavor": "Работникам - бесплатные игрушки.",
     "buildings.zebraForge.label": "Печи зебр",
+    "buildings.zebraForge.desc": "Открывает создание кровавых камней и т-мифрила.",
     "buildings.zebraOutpost.label": "Аванпост зебр",
     "buildings.zebraOutpost.desc": "Предоставляет базу для охотничьих экспедиций. Каждый уровень повышает эффективность экспедиции на 5%",
     "buildings.zebraWorkshop.label": "Мастерская зебр",
@@ -278,6 +289,8 @@
     "challendge.ironWill.label": "Железная Воля",
     "challendge.ironWill.desc": "Железная Воля - это особый тип вызова. Его не нужно принимать здесь - просто играй без котят.",
     "challendge.ironWill.effect.desc": "Без эффекта",
+    "challendge.pacifism.label": "Пацифизм",
+    "challendge.postApocalypse.label": "Постапокалипсис",
     "challendge.winterIsComing.label": "Зима пришла",
     "challendge.winterIsComing.desc": "Начни партию с вечной зимой.<br><br>Цель: Доберись до Гелиоса.",
     "challendge.winterIsComing.effect.desc": "Погода в общем улучшится.",
@@ -404,6 +417,7 @@
     "effectsMgr.statics.onAHillCultureCap.title": "Бонус пределу культуры",
     "effectsMgr.statics.oilReductionRatio.title": "Снижение потребления нефти",
     "effectsMgr.statics.oilWellRatio.title": "Бонус к нефти",
+    "effectsMgr.statics.pollutionRatio.title": "Прирост загрязнения",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Добыча урана потрошителями планет",
     "effectsMgr.statics.priceRatio.title": "Наценка на строения",
     "effectsMgr.statics.prodTransferBonus.title": "Бонус к получаемой с Катта продукции",
@@ -435,6 +449,8 @@
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Сезонный бонус к солнечным батареям",
     "effectsMgr.statics.solarRevolutionLimit.title": "Увеличение лимита",
     "effectsMgr.statics.solarRevolutionRatio.title": "Бонус производства",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Хранение",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Бонус веры",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "Создание звездных карт космическими маяками",
     "effectsMgr.statics.spaceElevator-prodTransferBonus.title": "Бонус продукции Катта к космическим лифтам",
     "effectsMgr.statics.spaceRatio.title": "Бонус к космическому производству",
@@ -486,6 +502,7 @@
     "effectsMgr.type.resProduction": "{0} производство",
     "effectsMgr.type.resRatio": "{0} бонус",
     "effectsMgr.statics.coalPolicyRatio.title": "Бонус производства угля",
+    "effectsMgr.statics.consumableLuxuryHappiness.title": "Счастье от предметов роскоши",
     "effectsMgr.statics.ironPolicyRatio.title": "Бонус производства железа",
     "effectsMgr.statics.titaniumPolicyRatio.title": "Бонус производства титана",
     "effectsMgr.statics.faithPolicyRatio.title": "Бонус производства веры",
@@ -521,6 +538,7 @@
     "menu.reset": "Сбросить",
     "menu.wipe": "Новая игра",
     "menu.getTheApp": "Скачать приложение",
+    "mid.buildings.tip": ".",
     "navbar.title": "Kittens Game",
     "navbar.menu.title": "Меню",
     "navbar.btn.hunters": "Отправить всех охотников",
@@ -558,6 +576,7 @@
     "opts.theme.cyber": "Кибер",
     "opts.theme.dark": "Инверсия",
     "opts.theme.default": "Классика",
+    "opts.theme.dune": "Дюна",
     "opts.theme.factory": "Фабрика",
     "opts.theme.fluid": "Жидкая",
     "opts.theme.gold": "Золотая",
@@ -571,6 +590,7 @@
     "opts.theme.school": "Черная доска",
     "opts.theme.sleek": "Гладкая",
     "opts.theme.space": "Космическая",
+    "opts.theme.spooky": "Страшный",
     "opts.theme.unicorn": "Единорог",
     "opts.theme.unlocked": "Цветовая схема открыта: ",
     "opts.theme.vessel": "Научная",
@@ -593,6 +613,8 @@
     "policy.autocracy.label": "Автократия",
     "policy.bigStickPolicy.label": "Политика большой палки",
     "policy.bigStickPolicy.desc": "Говорите мягко, но побивайте соседей по необходимости. Посольства дешевле.",
+    "policy.carnivale.label": "Карнавал",
+    "policy.carnivale.desc": "Группа философов эпикурейцев занимается планированием вечеринок. Примите эту школу мысли, увеличив скорость прибытия котят во время фестивалей в обмен на увеличение потребления ресурсов роскоши во время них.",
     "policy.cityOnAHill.label": "Город на холме",
     "policy.cityOnAHill.desc": "Станьте ярким примером миру, который ненавидите. Максимальный запас культуры увеличен.",
     "policy.clearCutting.label": "Сплошная вырубка",
@@ -613,8 +635,11 @@
     "policy.epicurianism.desc": "Наши эпикурейцы верят, что удовольствие это высшее благо. Ресурсы роскоши дают немного больше счастья.",
     "policy.expansionism.label": "Космологическое либертарианство",
     "policy.expansionism.desc": "Приватизируйте Луну! Никаких изменений на Катте, но производство недостания увеличено.",
+    "policy.extravagance.label": "Расточительность",
+    "policy.extravagance.desc": "Фракция философов эпикурейцев считает, что общество должно удвоить свою нынешнюю философию. Потребляемые ресурсы роскоши увеличивают счастье еще больше, но расходуются в три раза быстрее.",
     "policy.fascism.label": "Фашизм",
     "policy.fascism.desc": "Лебенсраум! Пенальти от населения к счастью исчезнет, и избушки стоят в два раза дешевле.",
+    "policy.frugality.label": "Умеренность",
     "policy.fullIndustrialization.label": "Полная индустриализация",
     "policy.fullIndustrialization.desc": "Примите совет от ваших новых глав индустрий, немного увеличив бонус к сборке на фабриках.",
     "policy.isolationism.label": "Изоляционизм",
@@ -639,6 +664,8 @@
     "policy.radicalXenophobia.label": "Радикальная ксенофобия",
     "policy.rationality.label": "Рациональность",
     "policy.rationality.desc": "Принять видение, что мир может быть фундаментально осознан. Получите небольшой бонус к производству науки и железа, однако будете выглядеть глупо в будущем.",
+    "policy.rationing.label": "Нормирование",
+    "policy.rationing.desc": "Стоики призывают к ограничениям и экономии, увеличивая эффективность охоты и сокращая влияние счастья на потребление мяты.",
     "policy.republic.label": "Республика",
     "policy.republic.desc": "Подходит для больших обществ. Высокоранговые лидеры предоставляют небольшой бонус производства всем котятам.",
     "policy.socialism.label": "Социализм",
@@ -661,6 +688,12 @@
     "policy.zebraRelationsAppeasement.desc": "Попытайтесь подружиться с зебрами, несмотря на их ненависть к вам. Условия торговли менее жёсткие, но приток золота немного снижен.",
     "policy.zebraRelationsBellicosity.label": "Отношения с зебрами: воинственность",
     "policy.zebraRelationsBellicosity.desc": "Выступите против зебр, ухудшите торговлю с ними, но получите уважение всех прочих рас.",
+    "pollution.increasing": "Загрязнение усиливается",
+    "pollution.label": "Загрязнение",
+    "pollution.level0": "Ваши котята не испытывают проблем от загрязнения.",
+    "pollution.level1.warning": "Учёные предупреждают, что загрязнение может повлиять на урожайность мяты в будущем.",
+    "pollution.level1": "Загрязнение влияет на производство кошачьей мяты",
+    "pollution.level4.warning": "Теологи опасаются, что потемневшее небо ослабит связь котят с солнцем.",
     "prestige.panel.label": "Метафизика",
     "prestige.adjustmentBureau.label": "Бюро поправок",
     "prestige.adjustmentBureau.desc": "Открывает дополнительные вызовы.",
@@ -739,10 +772,12 @@
     "prestige.zebraDiplomacy.desc": "Некоторые зебры-охотники останутся в поселении.",
     "religion.adoreBtn.label": "Поклоняться звёздам!",
     "religion.btn.sacrifice": "Жертва",
+    "religion.btn.refine": "Очистить",
     "religion.faithCount.bonus": "бонус",
     "religion.faithCount.pool": "Вера: {0}",
     "religion.adore.confirmation.msg": "Вы уверены, что хотите конвертировать всё Поклонение в Богоявление?\n\nВы получите бонус к конвертации Веры (Восславь солнце), основывающийся на вашем итоговом количестве Богоявления.\n\nБогоявление и этот бонус будут сохраняться при сбросе игры.\n\nНАЖАТИЕ ЭТОЙ КНОПКИ СОТРЕТ ВСЕ ПОКЛОНЕНИЕ И ПЕРЕЗАПУСТИТ БОНУС К ПРОИЗВОДСТВУ СОЛНЕЧНОЙ РЕВОЛЮЦИИ.",
     "religion.msg.corruption": "Твой аликорн был осквернен маркерами!",
+    "religion.pact.pactOfExtermination.label": "Пакт об уничтожении",
     "religion.panel.cryptotheology.label": "Криптотеология",
     "religion.panel.orderOfTheSun.label": "Орден солнца",
     "religion.panel.ziggurat.label": "Зиккураты",
@@ -794,6 +829,7 @@
     "religion.tu.blackCore.flavor": "Построено из костей жертвенных котят.",
     "religion.tu.blackLibrary.label": "Черная библиотека",
     "religion.tu.blackLibrary.desc": "Каждая черная библиотека улучшает эффект Кодекса Левиафанов на 2%. Это значение также улучшается кладбищами единорогов.",
+    "religion.tu.blackLibrary.flavor": "Быть может, здесь специально слишком темно для чтения.",
     "religion.tu.blackNexus.label": "Чёрный Нексус",
     "religion.tu.blackNexus.desc": "Улучшает переработку кристаллов времени в реликвии.<br />Каждый черный фокус увеличит эффективность создания реликвий на количество черных пирамид.<br>Этот эффект также влияет на станции реликвий.",
     "religion.tu.blackNexus.flavor": "Глаз в небе.",
@@ -855,10 +891,12 @@
     "res.notify.unavailable": "Строение недоступно - не хватает объёма хранилища для всех необходимых ресурсов. Попробуй позднее.",
     "res.notify.unavailableTime": "Это строение будет строиться слишком долго ({0}+ дней). Попробуй позднее.",
     "res.stack.baseline": "Без улучшений",
+    "res.stack.baselineRatio": "Улучшение",
     "res.stack.bonusTransf": "Переданный бонус",
     "res.stack.boost": "Ускорение",
     "res.stack.buildings": "Строения",
     "res.stack.policy": "Политики",
+    "res.stack.pollution": "Загрязнение",
     "res.stack.convCons": "Потребление переработкой",
     "res.stack.convProd": "Производство переработкой",
     "res.stack.culturalExchanges": "Культурный обмен",
@@ -867,6 +905,7 @@
     "res.stack.environmentPolicy": "Окружающая среда",
     "res.stack.expansionism": "Космолиберальный бонус",
     "res.stack.faith": "Вера",
+    "res.stack.holyGenocide": "Святой Геноцид",
     "res.stack.solarRevolution": "Солнечная рвеволюция",
     "res.stack.festival": "Эффект фестиваля",
     "res.stack.knowledgeShared": "Обмен знаниями",
@@ -961,9 +1000,11 @@
     "resources.zebras.title": "зебры",
     "resources.sorrow.full": "Чёрная жидкая печаль",
     "resources.sorrow.short": "Печаль",
+    "gift.repaired": "Древние боги починили твой подарок",
     "gift.resources": "Получен {0} {1}!",
     "gift.apocrypha": "Бонус апокрифе увеличен на {0}%!",
     "gift.transcendence": "Уровень восхождения увеличен на 4!",
+    "gift.metaphysics": "Получен {0}!",
     "save.export.msg": "Экспорт удачен!",
     "save.import.confirmation.msg": "Точно? Это перезапишет твоё сохранение!",
     "save.import.msg": "Импорт удачен!",
@@ -1388,6 +1429,7 @@
     "trade.bcoin.crash": "Разозлить Невидимую Чёрную Руку",
     "trade.bcoin.crash.desc": "Заставить рынок блэккоина рухнуть",
     "trade.correct.bcoin": "Произошла огромная коррекция на крипторынке",
+    "trade.embassy.label": "Посольство",
     "trade.embassy.desc": "Улучшить ваши дипломатические отношения путём открытия посольства",
     "trade.embassy.pinned": "Закреплено",
     "trade.embassy.unpinned": "Откреплено",
@@ -1395,6 +1437,11 @@
     "ui.filter.available": "Достижимые",
     "ui.filter.enabled": "Доступные",
     "ui.filter.togglable": "Переключаемое",
+    "ui.kgnet.login": "Войти",
+    "ui.kgnet.online": "Онлайн",
+    "ui.kgnet.save.save": "Сохранить",
+    "ui.kgnet.save.load": "Загрузить",
+    "ui.kgnet.sync": "Синхронизация облачных сохранений",
     "ui.toggle.researched": "Спрятать изученное",
     "ui.loading.msg.0": "Кормим зебр",
     "ui.loading.msg.1": "Направляем зиккураты",
@@ -1424,6 +1471,7 @@
     "ui.pause.title": "Поставить/снять мяузу",
     "ui.undo": "отменено ({0}s)",
     "ui.undo.title": "Отменить изменение",
+    "ui.queue.link": "Очередь",
     "ui.close": "закрыть",
     "ui.option.language": "Язык:",
     "ui.option.language.add": "Добавить перевод",
@@ -1452,23 +1500,27 @@
     "ui.option.export.button": "Экспорт",
     "ui.option.import.button": "Импорт",
     "ui.option.export": "Экспорт в:",
+    "ui.option.export.dropbox": "Dropbox (Бета)",
     "ui.option.export.simple.file": "Файл (простое имя)",
     "ui.option.export.full.file": "Файл (полное имя)",
     "ui.option.export.text": "Текстовый экспорт:",
     "ui.option.close.button": "Закрыть",
     "ui.option.import.warning": "Внимание! Импортирование сохранения перезапишет текущую игру.",
     "ui.option.import.from": "Вид импорта:",
-    "ui.option.import.from.dropbox": "Dropbox (Beta)",
+    "ui.option.import.from.dropbox": "Dropbox (Бета)",
     "ui.option.import.from.text": "Текстовый импорт:",
     "ui.option.do.import.button": "Импорт",
     "ui.option.cancel.button": "Отмена",
     "ui.option.app.text": "Kittens Game Mobile вышла! Ссылка для скачивания:",
     "ui.option.app.android": "Андроид",
     "ui.option.app.ios": "iOS",
+    "ui.option.notation": "Форма записи чисел:",
+    "queue.alphabeticalToggle": "Сортировать очередь по алфавиту",
     "left.resources": "ресурсы",
     "left.resources.tip": "Ctrl+click на ресурс, чтобы спрятать его, шестеренка для большей настройки.",
     "left.font.inc": "шрифт+",
     "left.font.dec": "шрифт-",
+    "left.craft": "сборки",
     "left.trade.do": "Торговать с {0}",
     "left.hunt": "Охотиться",
     "left.hunt.time": "раз",
@@ -1631,6 +1683,7 @@
     "about.discord": "Присоединяйтесь к нам в Discord!: ",
     "iron.will.warning.msg": "Это действие завершит режим \"Железная воля\". Вы уверены?",
     "effectsMgr.heatMax.title": "Максимальная Температура",
+    "effectsMgr.timeImpedance.title": "Сопротивление времени",
     "btn.praise": "Хвалить",
     "village.label.na": "Недоступно",
     "village.name.Angel": "Ангел",
@@ -1640,6 +1693,7 @@
     "village.name.Molly": "Молли",
     "village.name.Jasper": "Джаспер",
     "village.name.Oscar": "Оскар",
+    "village.name.Meeko": "Мико",
     "village.name.Tami": "Тами",
     "village.surname.Smoke": "Дым",
     "village.surname.Dust": "Пыль",
@@ -1654,6 +1708,7 @@
     "village.surname.Shadow": "Тень",
     "eta.year": "у",
     "eta.day": "д",
+    "eta.hour": "ч",
     "eta.min": "м",
     "eta.sec": "с",
     "modal.button.ok": "ОК",
@@ -1877,7 +1932,7 @@
     "workshop.nuclearPlants.label": "Ядерные сталеплавильни",
     "workshop.nuclearPlants.desc": "Сталеплавильни эффективнее ещё на 2% бонуса к изготовлению за каждый реактор.",
     "workshop.nuclearSmelters.label": "Ядерные плавильни",
-    "workshop.nuclearSmelters.desc": "Плавильни начнут выплавлять титан.",
+    "workshop.nuclearSmelters.desc": "В плавильне теперь можно производить титан",
     "workshop.offsetPress.label": "Офсетная печать",
     "workshop.offsetPress.desc": "Печатный пресс эффективнее в 4 раза.",
     "workshop.offsetPress.flavor": "Бумага заходит, фото котов выходит.",
