--- a/res/i18n/crowdin/tr.json
+++ b/res/i18n/crowdin/tr.json
@@ -208,6 +208,7 @@
     "buildings.workshop.desc": "Çok çeşitli geliştirme seçenekleri sunar. Dönüşüm verimliliğini %6 artırır",
     "buildings.workshop.flavor": "Çalışanlara ücretsiz oyuncak imkanı",
     "buildings.zebraForge.label": "Zebra demirhanesi",
+    "buildings.zebraForge.desc": "Kan taşı ve t-mitril üretiminin kilidini açar.",
     "buildings.zebraOutpost.label": "Zebra karakolu",
     "buildings.zebraOutpost.desc": "Av gezileri için bir üs sağlar. Her geliştirme seviyesi gezi verimliliğini %5 arttırır",
     "buildings.zebraWorkshop.label": "Zebra atölyesi",
@@ -408,6 +409,8 @@
     "effectsMgr.statics.solarFarmRatio.title": "Güneş çiftliği bonusu",
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Güneş çiftliği mevsimlik bonusu",
     "effectsMgr.statics.solarRevolutionRatio.title": "Üretim bonusu",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Depolama",
+    "effectsMgr.statics.pyramidFaithRatio.title": "İnanç bonusu",
     "effectsMgr.statics.spaceElevator-prodTransferBonus.title": "Uzay Asansörü - Aktarılmış üretim bonusu",
     "effectsMgr.statics.spaceRatio.title": "Uzay üretimi bonusu",
     "effectsMgr.statics.spaceScienceRatio.title": "Uzay bilimi bonusu",
@@ -428,6 +431,7 @@
     "effectsMgr.statics.temporalFluxProduction.title": "Zamansal akı üretimi",
     "effectsMgr.statics.temporalFluxProductionChronosphere.title": "Zamanküresi zamansal akış üretimi",
     "effectsMgr.statics.temporalParadoxDay.title": "Geçici Paradoks'taki Gün",
+    "effectsMgr.statics.temporalParadoxDayBonus.title": "Geçici Paradoks'taki Gün",
     "effectsMgr.statics.temporalParadoxVoid.title": "Maks boşluk",
     "effectsMgr.statics.terraformingMaxKittens.title": "İstasyon dünyalaştırma kedi bonusu",
     "effectsMgr.statics.theocracyFaithProductionBonus.title": "İnanç üretim bonusu",
@@ -462,6 +466,8 @@
     "craft.msg.notEnoughCatnip": "yetersiz kedi nanesi!",
     "menu.about": "Hakkında",
     "menu.close": "Kapalı",
+    "menu.reset": "Sıfırla",
+    "navbar.energy.prod.short": "Üretim:",
     "opts.highlight.desc": "Oyun, depolama alanıyla sınırlı binaları kırmızıyla vurgulayacaktır.",
     "opts.lang": "Dil",
     "opts.theme.black": "Siyah",
@@ -508,20 +514,44 @@
     "policy.socialism.desc": "Etkisi yok",
     "policy.sustainability.label": "Sürdürülebilirlik",
     "policy.tradition.label": "Gelenek",
+    "prestige.binah.desc": "Paragon efektlerini %5 geliştirir",
     "prestige.blackCodex.desc": "Tek boynuzlu at mezarlığının kilidini açar.",
+    "prestige.chesed.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.chokhmah.desc": "Paragon efektlerini %5 geliştirir",
     "prestige.engeneering.label": "Aydınlanma",
+    "prestige.gevurah.desc": "Paragon efektlerini %5 geliştirir",
     "prestige.goldenRatio.label": "Altın Oran",
+    "prestige.hod.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.keter.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.malkuth.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.netzach.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.renaissance.desc": "Bütün fiyat oranlarını %2.25 düşür",
     "prestige.tiferet.desc": "Paragon efektlerini %5 geliştirir",
+    "prestige.yesod.desc": "Paragon efektlerini %5 geliştirir",
+    "religion.btn.refine": "Arıt",
     "religion.faithCount.bonus": "1",
     "religion.faithCount.pool": "Dua:{0}",
+    "religion.sacrificeBtn.all": "tümü",
     "religion.tu.blackCore.flavor": "Yavru kedi kurbanlarının kemikleriyle inşa edildi.",
     "religion.zu.marker.label": "İşaretleyici",
+    "unit.year": "yıl",
     "res.stack.sharedKnowledge": "Paylaşılan bilgi",
+    "res.stack.spaceProdBonus": "Uzay üretimi bonusu",
+    "res.stack.spaceProductionBonus": "Uzay üretimi bonusu",
+    "res.stack.steamworks": "Buhar makinesi",
     "resources.alloy.title": "alaşım",
     "resources.bloodstone.title": "kantaşı",
+    "resources.craftTable.all": "tümü",
+    "resources.culture.title": "kültür",
+    "resources.gold.title": "altın",
+    "resources.kittens.title": "kedicikler",
+    "resources.oil.title": "petrol",
     "resources.science.title": "bilim",
+    "resources.wood.title": "ahşap",
     "resources.epiphany.title": "aydınlanma",
+    "resources.zebras.title": "zebralar",
     "save.import.confirmation.msg": "Emin misin? Bu eski kayıdın üzerine yazacak!",
+    "save.import.msg": "Kayıt dışa aktarması başarılı!",
     "science.acoustics.label": "Akustik",
     "science.architecture.label": "Mimari",
     "science.architecture.flavor": "Daha büyük, daha iyi kedi kuleleri!",
@@ -532,28 +562,56 @@
     "science.particlePhysics.label": "Parçacık Fiziği",
     "science.sattelites.label": "Uydular",
     "science.voidSpace.label": "Boş uzay",
+    "space.mission.name.complete": "{0} (tamamlandı)",
     "space.planet.moon.moonOutpost.label": "Ay Üssü",
     "space.planet.yarn.terraformingStation.label": "İklim Düzenleme İstasyonu",
     "stats.time.current": "Oynarken geçirilen süre",
+    "tab.name.challenges": "Meydan okumalar",
+    "tab.name.science": "Bilim",
+    "tab.name.space": "Uzay",
     "tab.name.trade": "Takas",
+    "tab.name.workshop": "Atölye",
+    "time.fixCryochambers.label": "Dondurma haznesini tamir et",
     "time.reset.instructional": "Zaman çizgisini sıfırlamak oyunu en baştan başlatır. Tüm istatistiklerinizi ve başarılarınızı elinizde tutarsınız. Çeşitli oyun ek puanları kazanabilirsiniz.<br><br>Bu noktada oyunu sıfırlarsanız kazanacaklarınız:",
     "time.reset.title": "Sıfırla",
     "time.tc.shatter": "Geçici enerji serbest bırakıldı, {0} yıl atlandı",
     "trade.msg.elders.feed": "Yaşlıları besle",
     "trade.race.dragons": "Ejderhalar",
+    "trade.race.lizards": "Süleymancıklar",
+    "trade.race.zebras": "Zebralar",
+    "trade.leviathans.energy": "Enerji: ",
     "trade.bcoin.buy": "Siyah para satın al",
+    "ui.filter.all": "Tümü",
     "ui.loading.msg.15": "Zaman paradokslarını düzeltmek",
     "ui.save.tooltip": "Kaydedildi!",
+    "ui.energy.tooltip": "Enerji",
+    "ui.close": "kapat",
+    "ui.option.language": "Dil:",
     "ui.option.tooltips.right": "Alet ipuçlarını sağ sütuna taşı",
     "ui.option.close.button": "Kapat",
+    "left.resources": "kaynaklar",
+    "left.craft": "üret",
+    "console.filter.trade": "Takas",
+    "console.filter.craft": "Üret",
+    "console.filter.unicornSacrifice": "Tek boynuzlu at Kurbanlıkları",
     "village.bonus.desc.manager": "Avlanma bonusu",
     "village.bonus.desc.metallurgist": "Metal yapma bonusu",
     "village.btn.manage.desc": "Lider kedilerin tecrübelerine göre iş dağılımını en iyi hale getirir",
+    "village.census.lbl.happiness": "Mutluluk",
+    "village.census.lbl.leader": "Lider",
+    "village.happiness.challenges": "Meydan okumalar",
+    "village.job.bonus": "Meslek bonusu",
     "village.job.miner": "Madenci",
     "village.job.woodcutter.desc": "+0.09 odun/saniye",
+    "village.msg.kittens": "kedicikler",
+    "village.tab.clear.job.confirmation.msg": "Emin misin?",
     "village.tab.title.outpost": "Karakol",
     "village.trait.manager": "Müdür",
-    "eta.day": "d",
+    "workshop.refine.confirmation": "Kedilerin ÖLÜCEK",
+    "res.per.year": "yıl",
+    "menu.language": "Dil",
+    "iron.will.warning.msg": "Bu demir iradeyi bitirecek. Emin misin?",
+    "village.name.Oreo": "Oreo",
     "workshop.astrolabe.desc": "Gözlem evi maksimum bilim bonusunu %50 arttırır",
     "workshop.augumentation.desc": "Kedicik yetenekleri %100 daha etkili",
     "workshop.cargoShips.desc": "Her gemi %1 gemi kapasite bonusu verir",
@@ -563,7 +621,11 @@
     "workshop.crafts.alloy.label": "Alaşım",
     "workshop.crossbow.desc": "Yayın daha güçlü bir versiyonu. Kedi gücü üretimini %25 artırır",
     "workshop.enrichedThorium.desc": "Reaktörler %25 daha az thorium harcayacak",
+    "workshop.factoryOptimization.label": "Fabrika Optimizasyonu",
+    "workshop.factoryProcessing.label": "Fabrika Çalışıyor",
     "workshop.geodesy.flavor": "Altın koklayan kediler",
+    "workshop.ironAxes.desc": "Odun kesiciler %50 daha etkilidir",
+    "workshop.logistics.desc": "Kedicik yetenekleri %15 daha etkili",
     "workshop.mineralAxes.desc": "Odun kesiciler %70 daha etkilidir",
     "workshop.miningDrill.label": "Madencilik Matkabı",
     "workshop.qdot.label": "Kuantum nokta hücreleri",
